[project]
name = "zm01"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "haruka-1112", email = "harukaorange.hrk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-datareader>=0.10.0",
    "seaborn>=0.13.2",
    "typer>=0.16.0",
    "yfinance>=0.2.65",
]

[project.scripts]
zm01 = "zm01.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
